<resources>
    <string name="app_name">eVacinas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="consultar_historico_paciente">Consultar Historico Paciente</string>
    <string name="listar_todas_consultas">Listar Todas Consultas</string>
    <string name="consultar_pacientes_cadastrados">Consultar Pacientes Cadastrados</string>
    <string name="agendar_retorno">Agendar Retorno</string>
    <string name="atualizar_paciente">Atualizar Paciente</string>
    <string name="procedimentos_realizados">Procedimentos Realizados</string>
    <string name="salva_paciente">Salva Paciente</string>
    <string name="cpf">CPF</string>
    <string name="local">Local</string>
    <string name="data">Data</string>
    <string name="usuario">Usuario</string>
    <string name="button">Button</string>
    <string name="nome">Nome</string>
    <string name="observa_o">Observação</string>
    <string name="dose">Dose</string>
    <string name="data_aplica_o">Data Aplicação</string>
    <string name="lote">Lote</string>
    <string name="data_vencimento">Data Vencimento</string>
    <string name="data_hora_consulta">Data Hora Consulta</string>
    <string name="local_consulta">Local Consulta</string>
    <string name="gravar_procedimentos">Gravar Procedimentos</string>
    <string name="apelido">Apelido</string>
    <string name="tipo_telefone">Tipo Telefone</string>
    <string name="numero_tel">Numero Tel.</string>
    <string name="rua">Rua</string>
    <string name="bairro">Bairro</string>
    <string name="numero_rua">Numero Rua</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="cep">Cep.</string>
    <string name="cadastrar_paciente">Cadastrar Paciente</string>
    <string name="numero">Numero</string>
    <string name="msg">TODO</string>
    <string name="evacinas">evacinas</string>

</resources>