<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.AtualizaPacienteActivity">

    <EditText
        android:id="@+id/et_atualiza_paciente_telefone_endereco_cidade"
        android:layout_width="207dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cidade"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_telefone_endereco_numero" />

    <EditText
        android:id="@+id/et_atualiza_paciente_telefone_tipo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/tipo_telefone"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_apelido"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_atualiza_paciente_telefone_endereco_rua"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rua"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_telefone_numero"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_atualiza_paciente_telefone_endereco_cep"
        android:layout_width="202dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/cep"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/et_atualiza_paciente_telefone_endereco_numero"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_telefone_endereco_bairro" />

    <EditText
        android:id="@+id/et_atualiza_paciente_telefone_endereco_numero"
        android:layout_width="208dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/numero_rua"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_telefone_endereco_bairro"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_atualiza_paciente_telefone_endereco_estado"
        android:layout_width="199dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/estado"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/et_atualiza_paciente_telefone_endereco_cidade"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_telefone_endereco_cep"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_atualiza_paciente_telefone_numero"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numero_tel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_telefone_tipo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_atualiza_paciente_cpf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/cpf"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_atualiza_paciente_apelido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/apelido"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_nome"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_atualiza_paciente_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_cpf"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_atualiza_paciente_telefone_endereco_bairro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_telefone_endereco_rua"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_atualiza_paciente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atualizar_paciente"
        android:onClick="atualizaPaciente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_atualiza_paciente_telefone_endereco_cidade" />



</androidx.constraintlayout.widget.ConstraintLayout>